/*
 * $Id: ChangeLog,v 1.578 2009-03-02 05:06:54 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-03-01 23:05 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + include/i_picture.ch
  * include/oohg.ch
  * source/common_make.bat
  * source/makelib_mingw.bat
  + source/h_picture.prg
    + TPicture() control added.

2009-03-01 10:05 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    + TWindow:BackBitmap method added.
  * source/h_form.prg
    ! Small order correction.

2009-02-22 16:00 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_tab.prg
    ! Only moves to TOP when it's inside any container.

2009-02-20 23:23 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/winprint.prg
    ! Few casting added.

2009-02-18 20:20 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
  * source/h_xbrowse.prg
    ! Fixed scroll position when ::lDescending.

2009-02-15 19:34 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * doc/classes.txt
  * source/h_browse.prg
  * source/h_button.prg
  * source/h_checkbox.prg
  * source/h_combo.prg
  * source/h_controlmisc.prg
  * source/h_datepicker.prg
  * source/h_grid.prg
  * source/h_listbox.prg
  * source/h_monthcal.prg
  * source/h_radio.prg
  * source/h_scroll.prg
  * source/h_slider.prg
  * source/h_spinner.prg
  * source/h_tab.prg
  * source/h_textbox.prg
  * source/h_xbrowse.prg
    + ::DoChange() method added. It prevents a double OnChange call.

2009-02-13 20:10 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_browse.prg
    ! Fixed ::DbSkip() method when ::lDescending and record moves
      to EOF().
  * source/winprint.prg
    ! Don't ask for HBPRN at class creation (but reference it
      for compiler warning).
  * include/i_browse.ch
  * include/i_xbrowse.ch
    + DESCENDING clause added.